# ecommerce-ui-automation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: run_ui_tests.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 12afe5e48746ab67.txt  1c7210123b3babab.txt  2093d2a587a43008.txt  2b81b842cada233f.txt  2bc318a30bc5c21c.txt  3712213653ed121e.txt  452df4058a1793e.txt  46b8638eacee7b50.txt  46f0812d3b5d2ae0.txt  4d8b9aa84c00209.txt  5b8ad367786a8ccb.txt  5c68e0af612f611c.txt  5d362209c83f2c6c.txt  6c24bed35cca7a2b.txt  6d3be1535d99b449.txt  79d5bf06fd72783.txt  7c921cc012267fa6.txt  7dfd1aef686cad2c.txt  85991cbadaffd931.txt  864031cbf5df3cdf.txt  866f04559e16fa69.txt  86898e160f1e538b.txt  a207fdfbc153f8c2.txt  a33e5a373b2aded.txt  a47efffb0e5337be.txt  a4f9f46bbcd024de.txt  a7952a1c4e4a7f56.txt  af9f6255fc90794.txt  ba6466a5d2c08477.txt  bc694a995065c8b8.txt  bf958e330618a5b6.txt  bfddf97d6961ed52.txt  c79df33f6ea7eddb.txt  c9bf208df74d6248.txt  c9ebcd44a5d49e1d.txt  ccbe743c4f18f047.txt  cdfda435768f3743.txt  cf3c556077943078.txt  d46705d4bb626ed2.txt  d4ffa890dd8b7db9.txt  (+7 more)
data/test-cases/: 157baebba4c55739.json  18a2261f2d779a66.json  1a63d37d755920c1.json  1de02eb10e03f585.json  200a24c453d37365.json  (+72 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
(+25 files in other folders)
